# akro-demo

./: .env.example  .gitignore  CRITIQUE_AND_ADDONS.md  INTERVIEW.MD  README.md  pyproject.toml  requirements.txt
frontend/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/research/: page.tsx
frontend/components/: document-preview.tsx  landing-hero.tsx  research-chat.tsx  research-loading.tsx  research-report.tsx  research-view.tsx  theme-toggle.tsx
server/: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
server/api/: main.py
server/src/akro_agent/: __init__.py  fetch.py  graph.py  llm.py  models.py  orchestration.py  search.py
server/src/akro_agent/agents/: __init__.py  researcher.py  reviser.py  synthesizer.py
server/src/akro_agent/export/: __init__.py  pdf_writer.py  pptx_writer.py
src/akro_agent/: graph.py  llm.py  models.py  orchestration.py
src/akro_agent/agents/: critic.py  planner.py  researcher.py  slide_designer.py  synthesizer.py
src/akro_agent/export/: pptx_writer.py
